# Final-proj

./: .gitignore  README.md
final_proj/part_1/: M1.md  M1.nb  M2.md  M2.nb
final_proj/part_2/: Q1.md  Q1.py  Q2.md  Q2.py
final_proj/part_3/: Q3.md  Q3.py  Q4.md  Q4.py
final_proj/part_4/: 5A_nature_of_waves.md  5A_nature_of_waves.py  README.md
final_proj/part_5/: README.md
final_proj/part_5/quantum_wavefunc_redis/: README.md  pyproject.toml
final_proj/part_5/quantum_wavefunc_redis/quantum_wavefunc_redis/: __main__.py  wave_function.py
